--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:9N6l2nuUhhPRNFlh6vFPUEcL6xeSLu13dr9IssdLPEI=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
